# TCC

./: .gitignore  ENGENHARIA_DE_SOFTWARE_PERSONA_V2.txt  README.md  package-lock.json  package.json
avatar-readyplayerme-lipsycn-example-react/src/: constant.js
backend/: README.md  personas.db  pyproject.toml  requirements.txt  test_api.py
backend/app/: database.py  llm.py  main.py  models.py  persona.py  tts.py
backend/app/routers/: personas.py
backend/app/services/: persona_service.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Avatar.tsx  AvatarBadge.tsx  ChatPanel.tsx  Experience.tsx  MessageBubble.tsx  NameBadge.tsx  PersonaSelector.tsx
frontend/src/components/ui/: conversation.tsx  orb.tsx
frontend/src/contexts/: PersonaContext.tsx
frontend/src/hooks/: useAvatarChat.ts  useChat.ts  useServerStatus.ts
frontend/src/lib/: api.ts  errorUtils.ts  viseme.ts
frontend/src/lib/queries/: chat.ts  personas.ts
frontend/src/pages/: ChatPage.tsx  PersonasPage.tsx
