[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.20.0",
    "fastapi==0.115.0",
    "httpx>=0.27.0",
    "kokoro>=0.9.4",
    "python-multipart==0.0.12",
    "requests==2.32.3",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "uvicorn[standard]==0.32.0",
    "websockets==13.1",
]
